--- a/pages/countdown.njk
+++ b/pages/countdown.njk
@@ -1,6 +1,7 @@
 ---
 title: countdown
 description: Days until I'm back in Pittsburgh
+date: Last Modified
 ---
 <p id="countdown">As of <span id="now_d"></span> at <span id="now_t"></span>, there are
     <span id="d"></span> <span id="d_units"></span>,
