--- a/pages/links.njk
+++ b/pages/links.njk
@@ -1,6 +1,6 @@
 ---
 title: links
-description: A bunch of links I like. Explore the vast, independent web!
+date: Last Modified
 section: links
 ---
 <p>
