--- a/pages/links.njk
+++ b/pages/links.njk
@@ -1,10 +1,12 @@
 ---
-title: links
+title: Links
 date: Last Modified
+description: My collection of hyperlinks from around the world wide web.
 section: links
 ---
 <p>
-Links are the lifeblood of the web, and linking to other sites is a declaration of independence. —<a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">
+Links are the lifeblood of the web, and linking to other sites is a declaration of independence.
+—<a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">
     Every site needs a Links Page / Why linking matters
 </a></p>
 {% for link in links %}
