--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,8 +25,30 @@ body {
     line-height: 1.5;
 }
 
+p {
+    font-size: 1.1rem;
+}
+
 header {
-    background-color: var(--gray-300);
+    background-color: white;
+    border-bottom: 0.75px solid var(--gray-300);
+    display: flex;
+    flex-direction: row;
+    gap: 0.75rem;
+}
+
+header span {
+    /* top + bottom | left + right */
+    padding: 0 0.125rem;
+}
+
+header span a {
+    color: var(--stone-400);
+    text-decoration: none;
+}
+
+header span a:hover {
+    color: black;
 }
 
 header, main, footer {
@@ -39,6 +61,11 @@ main, div.content {
 
 main {
     flex: 1;
+    padding-top: 4rem;
+}
+
+footer p {
+    font-size: 0.9rem;
 }
 
 /* CSS RESET: https://www.joshwcomeau.com/css/custom-css-reset/ */
