update links page

--- a/pages/blog.njk
+++ b/pages/blog.njk
@@ -3,9 +3,9 @@ title: Blog
 date: Last Modified
 section: blog
 ---
-<ul style="list-style-type: none; padding-inline-start: 0;">
+<ul class="plain">
     {% for post in collections.posts | reverse %}
-    <li style="margin-bottom: 0.5rem;">
+    <li>
         <a style="font-size: 1.2rem; font-weight: 500;"href="{{ post.url }}">{{ post.data.title }}</a>
         <span style="font-size: 0.9rem; text-wrap: nowrap;">{{ post.date | formatPublishDate }}</span>
     </li>
