--- a/pages/more.njk
+++ b/pages/more.njk
@@ -3,3 +3,17 @@ title: More
 date: Last Modified
 section: more
 ---
+<ul class="plain">
+    <li>
+        <a href="/countdown">Countdown</a> the days until I'm back in Pittsburgh
+    </li>
+</ul>
+
+<h2>Reference pages</h2>
+<ul class="plain">
+    {% for p in collections.ref %}
+    <li>
+        <a href="{{ p.url }}">{{ p.data.title }}</a>
+    </li>
+    {% endfor %}
+</ul>
