add responsive styles

--- a/pages/links.njk
+++ b/pages/links.njk
@@ -4,13 +4,12 @@ date: Last Modified
 description: My collection of hyperlinks from around the world wide web.
 section: links
 ---
-<p style="margin-bottom: 2rem; font-size: 1rem; font-weight: 600; color: var(--neutral-500);">NOTE: This list is extremely incomplete. <span style="font-weight: 400;">But something is better than nothing. Check back later for more links.</span></p>
 
 <ul class="plain">
     {% for link in links %}
     <li>
-        <a class="ext-link" target="_blank" rel="noopener noreferrer"
-            href="{{ link.url }}">{{ link.title }}</a>
+        <p><a class="ext-link" target="_blank" rel="noopener noreferrer"
+            href="{{ link.url }}">{{ link.title }}</a></p>
         {# {% if link.tags %}
             {% for tag in link.tags %}
                 <span class="tag">{{ tag }}</span>
