--- a/pages/now.njk
+++ b/pages/now.njk
@@ -3,3 +3,8 @@ title: Now
 date: Last Modified
 section: now
 ---
+<ul>
+    <li>working on this website</li>
+    <li>figuring out some health stuff</li>
+    <li>listening to Lorde's new album</li>
+</ul>
