--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,8 +1,8 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
-    <article class="mb-20">
-        <h2 class="post-header">{{ title }}</h2>
-        <p class="text-sm text-gray-600 font-normal mb-8">{{ page.date | formatPostDate }} <a class="post-link" href="{{ page.url }}">Link to this post</a></p>
+    <article>
+        <h1 class="post-header">{{ title }}</h1>
+        <h5>{{ page.date | formatPostDate }} <a class="post-link" href="{{ page.url }}">Link to this post</a></h5>
         {{ content | safe}}
     </article>
 {% endblock %}
