--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 /* https://uicolors.app/tailwind-colors */
 :root {
+    --lime-100: oklch(0.967 0.067 122.328);
     --lime-200: oklch(0.938 0.127 124.321);
     --lime-400: oklch(0.841 0.238 128.85);
     --slate-400: oklch(0.704 0.04 256.788);
@@ -23,10 +24,6 @@ body {
     background-color: var(--neutral-800);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
-}
-
-p {
-    font-size: 1.1rem;
 }
 
 header {
@@ -55,6 +52,22 @@ header, main, footer {
     padding: 0.75rem;
 }
 
+h5 {
+    color: var(--neutral-500);
+    font-weight: 500;
+    margin-bottom: 32px;
+}
+
+/* article {
+    width: 60%;
+    min-width: 600px;
+    margin-bottom: 4rem;
+} */
+
+article p {
+    margin-bottom: 0.75rem;
+}
+
 main, div.content {
     background-color: white;
 }
@@ -64,10 +77,13 @@ main {
     padding-top: 4rem;
 }
 
+main p {
+    margin-bottom: 1rem;
+}
+
 div:has(> blockquote) {
     background-color: var(--lime-200);
-    width: 60%;
-    min-width: 600px;
+    font-size: 0.9rem;
     padding: 0.5rem;
     border: 1px solid var(--lime-400);
     border-radius: 0.25rem;
@@ -75,8 +91,39 @@ div:has(> blockquote) {
 }
 
 blockquote + p {
+    margin-top: 0.5rem;
     text-align: right;
     font-size: 0.9rem;
+}
+
+@media (max-width: 40rem) {
+    blockquote + p {
+        margin-left: 5rem;
+    }
+}
+
+code {
+    display: inline;
+    background-color: var(--gray-200);
+    color: black;
+    border: 1px solid var(--gray-400);
+    border-radius: .25rem;
+    padding: 0 0.25rem;
+}
+
+pre code {
+    display: block;
+    overflow-x: scroll;
+    background-color: black;
+    color: white;
+    padding: .5rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--lime-400);
+    margin-bottom: 16px;
+}
+
+ul {
+    margin-bottom: 16px;
 }
 
 ul.plain {
@@ -86,7 +133,7 @@ ul.plain {
 }
 
 ul.plain li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 8px;
 }
 
 span.tag {
@@ -95,8 +142,17 @@ span.tag {
     border-radius: 4px;
 }
 
-footer p {
+footer {
+    display: flex;
     font-size: 0.9rem;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+@media (max-width: 50rem) {
+    footer {
+        flex-direction: column;
+    }
 }
 
 /* CSS RESET: https://www.joshwcomeau.com/css/custom-css-reset/ */
