--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -23,13 +23,14 @@
     <title>{{ pageTitle }}</title>
     <link href="/assets/favicon.ico" rel="icon">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/tachyons.min.css">
     <link rel="canonical" href="{{ metadata.url }}{{ page.url }}">
+    <meta name="description" content="{{ pageDescription }}">
 
     <meta property="og:site_name" content="{{ metadata.title }}">
     <meta property="og:url" content="{{ metadata.url }}{{ page.url }}">
     <meta property="og:title" content="{{ pageTitle }}">
     <meta property="og:description" content="{{ pageDescription }}">
-    <meta name="description" content="{{ pageDescription }}">
 </head>
 
 <body>
