--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -11,7 +11,7 @@
     <span><a {% if section == 'now' %}
         style="color: black; text-decoration: underline;"
         {% endif %} href="/now">Now</a></span>
-    <span><a {% if section == 'more' %}
+    <span><a {% if section == 'catalogue' %}
         style="color: black; text-decoration: underline;"
-        {% endif %} href="/more">More</a></span>
+        {% endif %} href="/catalogue">Catalogue</a></span>
 </header>
