--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -2,8 +2,8 @@
 {% block content %}
     <h1 style="margin-bottom: 32px;">{{ title }}</h1>
     {{ content | safe}}
-    <div style="margin-top: 1.5rem;">
+    {# <div style="margin-top: 1.5rem;">
         <p style="color: var(--gray-400); font-size: 0.75rem; font-weight: 500;">
             Last updated {{ page.date | formatPageDate }}.</p>
-    </div>
+    </div> #}
 {% endblock %}
