--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ title: Index
 section: index
 ---
 <ul>
-    {% for page in collections.all %}
+    {% for page in collections.index %}
         {# <li><a href="{{ page.url }}">{{ page.data.title }}</a></li> #}
         <li><a href="{{ page.url }}">{{ page.url }}</a></li>
     {% endfor %}
