--- a/src/shoebox.njk
+++ b/src/shoebox.njk
@@ -2,8 +2,8 @@
 title: Shoebox
 date: Last Modified
 section: shoebox
+description: A collection of things that defy typical categorization. Inspired by Giles Turnbull.
 ---
-A collection of things that defy typical categorization. Inspired by <a href="https://gilest.org/shoebox/index.html">Giles Turnbull</a>
 
 <ul>
     {% for item in collections.shoebox %}
