--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,8 @@
     --lime-200: oklch(0.938 0.127 124.321);
     --lime-400: oklch(0.841 0.238 128.85);
     --slate-400: oklch(0.704 0.04 256.788);
+    --slate-500: oklch(55.4% 0.046 257.417);
+    --slate-600: oklch(44.6% 0.043 257.281);
     --gray-200: oklch(0.928 0.006 264.531);
     --gray-300: oklch(0.872 0.01 258.338);
     --gray-400: oklch(0.707 0.022 261.325);
@@ -21,6 +23,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    /* background-color: white; */
     background-color: var(--neutral-800);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     line-height: 1.5;
@@ -28,7 +31,7 @@ body {
 
 header {
     background-color: white;
-    border-bottom: 0.75px solid var(--gray-300);
+    border-bottom: 1.5px solid var(--gray-300);
     display: flex;
     flex-direction: row;
     gap: 0.75rem;
@@ -56,6 +59,18 @@ h5 {
     color: var(--neutral-500);
     font-weight: 500;
     margin-bottom: 32px;
+}
+
+p.description {
+    color: var(--slate-600);
+    font-weight: 300;
+    font-size: 0.9rem;
+}
+
+p.now-update {
+    font-weight: 500;
+    font-size: 0.75rem;
+    color: var(--gray-400);
 }
 
 /* article {
@@ -124,6 +139,27 @@ pre code {
     border-radius: 0.5rem;
     border: 1px solid var(--lime-400);
     margin-bottom: 16px;
+}
+
+/* h/t mdn docs: https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/hr */
+
+hr {
+    border: none;
+    border-top: 3px double var(--lime-400);
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+    margin: 2rem 0;
+}
+
+hr::after {
+  background: #fff;
+  content: "§";
+  /* color: var(--lime-400); */
+  color: var(--neutral-800);
+  padding: 0 4px;
+  position: relative;
+  top: -13px;
 }
 
 ul {
