--- a/src/posts.njk
+++ b/src/posts.njk
@@ -2,9 +2,10 @@
 title: Posts
 date: Last Modified
 section: posts
+description: Pages from my notebook. Mostly just stuff I'm thinking about at the moment.
 ---
 <ul>
     {% for post in collections.posts %}
-    <li><a href="{{ post.url }}">{{ post.data .title or post.url }}</a></li>
+    <li>{{ post.date | formatPublishDate }}: <a href="{{ post.url }}">{{ post.data .title or post.url }}</a></li>
     {% endfor %}
 </ul>
