happy with changes for now

--- a/src/now.njk
+++ b/src/now.njk
@@ -4,18 +4,11 @@ date: Last Modified
 section: now
 description: What I'm doing now (h/t Derek Sivers). See nownownow.com for more.
 ---
-{% for update in collections.now %}
-    <p class="now-update">Updated {{ update.fileSlug }}</p>
-    {{ update.content | safe }}
-{% endfor %}
-<hr>
-
-<details>
-    <summary>Then</summary>
-    {% for post in collections.then %}
-        <details>
-            <summary>{{ post.fileSlug }}</summary>
-            {{ post.content | safe }}
-        </details>
+<section style="margin: 2rem 0; background-color: var(--lime-200); padding: 0.75rem; border-radius: .5rem; border: 1.5px solid var(--lime-400);">
+    {% for update in collections.now %}
+        <p>As of {{ update.fileSlug}}, I am...</p>
+        {{ update.content | safe }}
     {% endfor %}
-</details>
+</section>
+
+<p>Curious about before? Check out what I was doing <a href="/then/">then</a>.</p>
