--- a/src/404.njk
+++ b/src/404.njk
@@ -1,8 +1,8 @@
 ---
-layout: layouts/base.njk
+layout: layouts/page.njk
 permalink: 404/index.html
 title: 404
+description: Oops, looks like this is a dead end. Sorry about that.
 ---
-<p class="text-2xl font-semibold mb-6">Oops, looks like this is a dead end. Sorry about that.</p>
 <p>If you think this was a mistake, you can <a class="underline hover:bg-lime-200" href="mailto:whitwaltman@mailbox.org?subject=404">shoot me an email</a> and I'll try to take a look.</p>
-<p>In the meantime, maybe go back <a class="underline" href="/">home</a>, or try visiting one of my <a class="hover:underline" href="/links">other</a> <a class="hover:underline" href="/archive">pages</a>?</p>
+<p>In the meantime, maybe go back <a class="underline" href="/">home</a>?
