--- a/src/_includes/layouts/html.njk
+++ b/src/_includes/layouts/html.njk
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generator" content="{{ eleventy.generator }}">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
-<body>
+<body class="flex flex-col min-h-screen justify-between">
     {{ content | safe }}
 </body>
 </html>
