--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,12 +1,10 @@
 ---
 layout: layouts/html.njk
 ---
-<header class="px-3 py-1.5">
-    <h1><a href="{{ metadata.url }}">{{ metadata.title }}</a></h1>
-</header>
+{% include "header.njk" %}
 <main class="px-3 py-1.5 flex-1">
     {{ content | safe }}
 </main>
-<footer class="px-3 py-1.5 bg-black">
-    <p class="text-sm text-white">Assembled by hand with words and pixels.</p>
+<footer class="bg-black px-3 py-1.5">
+    <span class="text-sm text-white">Forever a work in progress.</span>
 </footer>
