add now update with styling

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,8 +1,7 @@
 <header class="text-2xl px-3 py-1.5 mb-4">
-    <span>xii.iv.vii</span>:
     <span {% if "index" in page.filePathStem %}
             class="bg-lime-300"
-            {% endif %}><a href="/">index</a></span>
+            {% endif %}><a href="/">xii.iv.vii</a></span>:
     <span {% if "countdown" in page.filePathStem %}
             class="bg-lime-300"
             {% endif %}><a href="/countdown">countdown</a></span>
