--- a/src/_includes/layouts/html.njk
+++ b/src/_includes/layouts/html.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generator" content="{{ eleventy.generator }}">
-    <title>{{metadata.title}}</title>
+    <title>{{ site.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body class="flex flex-col min-h-screen justify-between">
