--- a/src/now.njk
+++ b/src/now.njk
@@ -16,10 +16,10 @@ layout: layouts/base.njk
     <div class="status-bar">
         {% if i == 0 %}
         <span>NOW</span>
-        <span class="date text-neutral-400">Updated {{ now[i].date | simpleDate }}</span>
+        <span class="date text-neutral-400">Updated {{ now[i].date.toDateString() }}</span>
         {% else %}
         <span>THEN</span>
-        <span class="date text-neutral-500">{{ now[i].date | simpleDate }}</span>
+        <span class="date text-neutral-500">{{ now[i].date.toDateString() }}</span>
         {% endif %}
     </div>
     <ul>
