--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,11 +1,8 @@
 <header class="text-2xl px-3 py-1.5 mb-4">
-    <span {% if "index" in page.filePathStem %}
-            class="bg-lime-300"
-            {% endif %}><a href="/">xii.iv.vii</a></span>:
-    <span {% if "countdown" in page.filePathStem %}
-            class="bg-lime-300"
-            {% endif %}><a href="/countdown">countdown</a></span>
-    <span {% if "now" in page.filePathStem %}
-            class="bg-lime-300"
-            {% endif %}><a href="/now">now</a></span>
+    <span class="{{ 'bg-lime-300' if 'index' in page.filePathStem }}">
+        <a href="/">xii.iv.vii</a></span>:
+    <span class="{{ 'bg-lime-300' if 'countdown' === page.fileSlug }}">
+        <a href="/countdown">countdown</a></span>
+    <span class="{{ 'bg-lime-300' if 'now' === page.fileSlug }}">
+        <a href="/now">now</a></span>
 </header>
