--- a/src/now.njk
+++ b/src/now.njk
@@ -11,8 +11,7 @@ layout: layouts/base.njk
 </p>
 
 {% for i in range(0, now.length) %}
-<div {% if i > 0 %} class="update then"
-    {% else %} class="update" {% endif %}>
+<div class="update {{ 'then' if i > 0 }}">
     <div class="status-bar">
         {% if i == 0 %}
         <span>NOW</span>
