make some copy tweaks, minor style change, update readme

--- a/src/countdown.njk
+++ b/src/countdown.njk
@@ -2,11 +2,12 @@
 layout: layouts/base.njk
 ---
 <p>
-    This is a page to display countdowns to events in my life.
+    This is a page to display countdowns for events in my life.
     It gives me something to look forward to and helps me conceptualize the passage of time.
 </p>
 <p>
-    A minimal amount of JavaScript is used in order to display the countdown.
+    A minimal amount of JavaScript is used in order to display the countdowns.
+    The countdown time is calculated based on when the page was loaded.
     To see an updated countdown, refresh this page.
 </p>
 
