--- a/src/index.njk
+++ b/src/index.njk
@@ -2,8 +2,13 @@
 layout: layouts/base.njk
 ---
 <p>
-    Hi, I'm Whit Waltman.<sup><a id="1" class="text-blue-700 underline" href="#fn-1">1</a></sup>
+    Hi, I'm <strong>whit waltman</strong>. Okay, that's not my actual name.
+    But it's one I feel at home in. The name is a {% a "https://en.wikipedia.org/wiki/Spoonerism", "spoonerism" %}
+    of Walt Whitman, an American poet.
+    I've been a fan of puzzles my whole life, and as I've grown older, I've developed a deep fondness for language and wordplay.
+    This is a small way for me to pay homage to that, as well as make a subtle nod to my queerness.
 </p>
-<div class="mt-10">
-    <sup>1</sup> Not my actual name <a id="fn-1" class="text-blue-700" href="#1">&crarr;</a>
-</div>
+<p>
+    This is my website. It used to look different. Now it looks like this.
+    It will continue to morph and evolve until I cease to exist.
+</p>
