add copy edits, add links

--- a/src/index.njk
+++ b/src/index.njk
@@ -2,13 +2,24 @@
 layout: layouts/base.njk
 ---
 <p>
-    Hi, I'm <strong>whit waltman</strong>. Okay, that's not my actual name.
-    But it's one I feel at home in. The name is a {% a "https://en.wikipedia.org/wiki/Spoonerism", "spoonerism" %}
-    of Walt Whitman, an American poet.
+    Hi, I'm whit waltman. Okay, that's not my actual name.
+    But it's one I feel at home in. It's a {% a "https://en.wikipedia.org/wiki/Spoonerism", "spoonerism" %}
+    of the name of {% a "https://en.wikipedia.org/wiki/Walt_Whitman", "an American poet" %}.
+</p>
+<p>
     I've been a fan of puzzles my whole life, and as I've grown older, I've developed a deep fondness for language and wordplay.
     This is a small way for me to pay homage to that, as well as make a subtle nod to my queerness.
 </p>
 <p>
     This is my website. It used to look different. Now it looks like this.
-    It will continue to morph and evolve until I cease to exist.
+    I suspect it will continue to morph and evolve for as long as it remains on the web.
 </p>
+<p>
+    I'm not the best writer, and I often struggle to talk about or describe myself, so please forgive the brevity.
+    There will be more to come soon here, but for now, you can find me elsewhere on the internet (see below) or write to me
+    at <code>whitwaltman[dot]mailbox[dot]org</code>.
+</p>
+<h2 class="font-medium">elsewhere</h2>
+<ul>
+    <li></li>
+</ul>
