tiny copy edits, minor style change

--- a/src/index.njk
+++ b/src/index.njk
@@ -17,7 +17,7 @@ layout: layouts/base.njk
 <p>
     I'm not the best writer, and I often struggle to talk about or describe myself, so please forgive the brevity.
     There'll be more stuff here soon, but for now, you can find me elsewhere on the internet (see below) or write to me
-    at <code>whitwaltman[dot]mailbox[dot]org</code>.
+    at <code>whitwaltman[at]mailbox[dot]org</code>.
 </p>
 <p>
     Thanks for stopping by.
