--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,5 +6,5 @@ layout: layouts/html.njk
     {{ content | safe }}
 </main>
 <footer class="px-3 py-1.5 mt-2">
-    <p class="text-xs text-neutral-600">Last built at: {{ site.latestBuild }}</p>
+    <p class="text-xs text-neutral-600">Latest build: {{ site.latestBuild }}</p>
 </footer>
