--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 ---
 <p>
-    Hi, I'm whit waltman. Okay, that's not my actual name.
+    Hi, I'm <span class="font-bold">whit waltman</span>. Okay, that's not my actual name.
     But it's one I feel at home in. It's a {% a "https://en.wikipedia.org/wiki/Spoonerism", "spoonerism" %}
     of the name of {% a "https://en.wikipedia.org/wiki/Walt_Whitman", "an American poet" %}.
 </p>
