--- a/src/countdown.njk
+++ b/src/countdown.njk
@@ -2,8 +2,8 @@
 layout: layouts/base.njk
 ---
 <p>
-    This is a page to display countdowns for events in my life.
-    It gives me something to look forward to and helps me conceptualize the passage of time.
+    This is a page that displays countdowns for events in my life.
+    It gives me something to look forward to and helps me conceptualize the passage of time. 
 </p>
 <p>
     A minimal amount of JavaScript is used in order to display the countdowns.
