add links page, update header

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -3,6 +3,8 @@
         <a href="/">xii.iv.vii</a></span>:
     <span class="{{ 'bg-lime-300' if 'countdown' === page.fileSlug }}">
         <a href="/countdown">countdown</a></span>
+    <span class="{{ 'bg-lime-300' if 'links' === page.fileSlug }}">
+        <a href="/links">links</a></span>
     <span class="{{ 'bg-lime-300' if 'now' === page.fileSlug }}">
         <a href="/now">now</a></span>
 </header>
