--- a/src/countdown.njk
+++ b/src/countdown.njk
@@ -34,7 +34,7 @@
         const h = Math.floor(diff / (1000 * 60 * 60)) % 24;
         const m = Math.floor(diff / (1000 * 60)) % 60;
 
-        el.textContent = `There are ${d} ${d === 1 ? "day" : "days"}, `
+        el.textContent = `There ${d === 1 ? "is" : "are"} ${d} ${d === 1 ? "day" : "days"}, `
             + `${h} ${h === 1 ? "hour" : "hours"}, and `
             + `${m} ${m === 1 ? "minute" : "minutes"} `
             + `until ${el.dataset.what}.`;
